# jax_parametric_models

./: .gitignore  README.md  debug_evm.py  distributions.py  environment.yml  part1_2.py  part3.py  part_expected.py  part_expected_expo.py  part_expected_gauss.py  pyproject.toml  test_expo.py  utils.py
examples/: api_example.py  api_example_toys.py  combine_gammagamma.py  combine_gammagamma_toys.py  debug_evm.py  part1_2.py  part3.py  part3_everwillow.py  part_expected.py  part_expected_expo.py  part_expected_gauss.py  plotting_helpers.py  test_expo.py  test_norm.py
src/paramore/: __init__.py  distributions.py  likelihood.py  modifiers.py  utils.py
